--- a/admin/index.html
+++ b/admin/index.html
@@ -6,18 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <!-- Include the script -->
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-
-    <!-- Initialize CMS with explicit config -->
-    <script>
-      if (window.CMS) {
-        window.CMS.init({
-          config: {
-            load_config_file: true
-          }
-        });
-      }
-    </script>
+    <script src="https://unpkg.com/decap-cms@3.1.2/dist/decap-cms.js"></script>
   </body>
 </html>
